gtkrange: Make GtkScales prefer physical scroll direction

Use this GtkEventControllerScroll hint to prefer always physical
motion direction for GtkScale widgets, as opposed to views where
"natural scroll" settings may feel more natural. These widgets
are directly manipulatable, so it makes sense to drag the slider
always in the same direction of motion.

Closes: https://gitlab.gnome.org/GNOME/gtk/-/issues/514
Closes: https://bugzilla.gnome.org/show_bug.cgi?id=739806
Part-of: <https://gitlab.gnome.org/GNOME/gtk/-/merge_requests/8836>